k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtd-hri-app-deployment
  labels:
    app: mtd-hri-app
spec:
  replicas: 5  # 設置為 5 個副本
  selector:
    matchLabels:
      name: mtd-hri-app-pod
      app: mtd-hri-app
  template:
    metadata:
      name: mtd-hri-app-pod
      labels:
        name: mtd-hri-app-pod
        app: mtd-hri-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - mtd-hri-app
            topologyKey: "kubernetes.io/hostname"  # 確保 Pod 分佈在不同的節點上
      imagePullSecrets:
      - name: docker-registry-harbor
      containers:
      - name: mtd-hri-app
        image: harbor.arfa.wise-paas.com/atmcmes/mtd-hri:1.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 9981
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
            ephemeral-storage: 150Mi
          limits:
            cpu: 300m
            memory: 300Mi
            ephemeral-storage: 200Mi
