k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mtd-hri-ingress
  namespace: kpidashboard
spec:
  rules:
    # External endpoint: mesbaseapiserver-atmcmes-ews001.ifactory.wise-stack.com.cn/
    # Internal endpoint: mesbaseapiserver.atmcmes.ews001.en.internal
    # appName.namespace.ews001.en.internal  <-- Must follow this rule to name the hostname
    - host: mtd-hri.kpidashboard.ews001.en.internal
      http:
        paths:
        - path: /
          backend:
            serviceName: mtd-hri-service
            servicePort: 80
